2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
		- (*_get_icon): use the active connection for more information in the
			tooltip

	* src/applet.c
	  src/applet.h
		- (applet_get_device_icon_for_state): pass active connection through
			to the get_icon device class handler

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet.c
		- Use "Mobile Broadband" everywhere instead of GSM or CDMA (bgo #551361)

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-mobile.c
	  src/connection-editor/ce-page-mobile.glade
		- Hide Network Type and Band items because they won't be supported until
			ModemManager support lands

2008-10-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (internal_init): use 'authentication' instead of secrets (bgo #548130);
			use 'hidden' instead of 'other' (bgo #544381)

	* src/applet-device-wifi.c
	  src/applet-device-wifi.h
	  src/applet.c
		- (nma_menu_show_cb, nma_menu_add_hidden_network_item): use 'hidden'
			instead of 'other' (bgo #544381)

2008-10-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
		- (wired_device_state_changed, cdma_device_state_changed,
		   gsm_device_state_changed): show what connection just got connected

2008-10-03  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (internal_init): when creating wifi networks, make the default button
			be "Create" instead of "Connect" (rh #465397); make the default
			button actually be default (bgo #554700) (patch from Rui Matos)

2008-10-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (routes_button_clicked_cb): check method before trying to use it
			(rh #465395)

2008-10-02  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h